--- a/public/helper.html
+++ b/public/helper.html
@@ -31,6 +31,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <![endif]-->
+
 </head>
 <body data-spy="scroll">
 <!-- Static navbar -->
@@ -65,15 +66,20 @@
 </header><!--navigation end here-->
 
 
-<section id="home" class="home-contact">
+<section id="home" class="helper">
     <div class="container">
         <div class="col-md-12">
-                    <h3 class="text-center">Nearby Help</h3>
-                <div class="map" id="map"></div>
-            <div id = 'prof'class="btn btn-danger" type="button" class="btn btn-info btn-lg"  style="border-radius: 25px; margin-left: 45%; width: 20%; margin-top: 10px; height: 60px; line-height: 55px; font-size: 20px "> Find Help </div>
-                            </div>
+            <h3 class="text-center">Helper Dashboard</h3>
+            <div style="height: 200px"></div>
+            <div style="margin-left: 45%">
+            <div class="switch">
+                <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
+                <label for="cmn-toggle-1" style="line-height: 150px; class="text-center">Available?</label>
+            </div>
+            </div>
+        </div>
 
-                        </div>
+    </div>
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
@@ -81,25 +87,56 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">NAME OF CHILD</h4>
+                    <h4 class="modal-title">Job Available</h4>
                 </div>
                 <div class="modal-body">
                     <h2>Profile</h2>
 
                     <div>
-                    <img src="images/prof.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
+                        <img src="images/happy-old-man.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
                     </div>
-                    <div><button type="button" class="btn btn-danger" data-dismiss="modal" style="margin-top: 10px; margin-left: 5%">Hire Help</button></div>
-                    <div style="margin-top: 10px; margin-left: 6%">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    </div>
+                    <div><button id="accept" type="button" class="btn btn-danger" data-dismiss="modal" style="margin-top: 10px; margin-left: 5%">Accept Job</button></div>
+                        <div style="margin-top: 10px; margin-left: 6%">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" >Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div id="myModal1" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <h4 class="modal-title">Job Available</h4>
+                </div>
+                <div class="modal-body">
+                    <h2>Profile</h2>
+
+                    <div>
+                        <img src="images/happy-old-man.jpg" style="border-radius: 50%; height: 150px; width: 150px;">
+                    </div>
+                    <div style="margin-top: 10px; margin-left: 6%">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <div><label id="minutes">00</label>:<label id="seconds">00</label></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">End This Job</button>
                 </div>
             </div>
 
@@ -162,70 +199,6 @@
 </footer>
 <!--footer end-->
 
-<script>
-    var map, infoWindow;
-
-    function initMap() {
-        var uluru = {lat:  39.9625980, lng: -76.7277450};
-        map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 10,
-            center: uluru
-        });
-        var marker = new google.maps.Marker({
-            position: {lat: 39.9625982, lng: -76.7277452},
-            map: map,
-            icon: './images/man.png'
-        });
-        marker = new google.maps.Marker({
-            position: {lat: 40, lng: -76.8277455},
-            map: map,
-            icon: './images/grey.ico'
-        });
-        var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
-         marker = new google.maps.Marker({
-            position: {lat: 40.07, lng: -76.8277455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.08, lng: -76.8277455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 39.8, lng: -76.9277455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.10, lng: -76.8977455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.11, lng: -76.8777455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.15, lng: -76.8377455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.07, lng: -76.8277455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.07, lng: -76.8277455},
-            map: map,
-            icon: './images/grey.ico'
-        });marker = new google.maps.Marker({
-            position: {lat: 40.07, lng: -76.8277455},
-            map: map,
-            icon: './images/grey.ico'
-        });
-
-    }
-
-</script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZn-yqv4oMvIhcaBTqVu9QinJwtTpVMDk&callback=initMap">
-</script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
 <script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
@@ -244,17 +217,60 @@
 <script src="contact_form/contact.js"></script>
 <!-- Vimeo video API -->
 <script src="js/headroom.js" type="text/javascript"></script>
-<script>
-    function checkPasswords()
-    {
-        let one = $("#password").val();
-        let two = $("#vpassword").val();
-        if (one != null && two != null && one != two)
-            $("#chkpass").html("Passwords do not match! Try again.").css("color", "red");
-        else
-            $("#chkpass").html("Successfully registered!").css("color", "green");
-    }
+<script type="text/javascript">
+    $(window).on('load',function(){
+
+        $('#cmn-toggle-1').change(
+                function(){
+                    if ($(this).is(':checked')) {
+                        alert('checked');
+                    }else{
+                        alert('not checked')
+                    }
+                });
+
+        $('#myModal').modal('show');
+
+
+    $("#accept").click(function(){
+        setTimeout(function(){
+            $("#myModal1").modal({
+                backdrop: 'static',
+                keyboard: false
+            });
+            var minutesLabel = document.getElementById("minutes");
+            var secondsLabel = document.getElementById("seconds");
+            var totalSeconds = 0;
+            setInterval(setTime, 1000);
+
+            function setTime()
+            {
+                ++totalSeconds;
+                secondsLabel.innerHTML = pad(totalSeconds%60);
+                minutesLabel.innerHTML = pad(parseInt(totalSeconds/60));
+            }
+
+            function pad(val)
+            {
+                var valString = val + "";
+                if(valString.length < 2)
+                {
+                    return "0" + valString;
+                }
+                else
+                {
+                    return valString;
+                }
+            }
+
+
+        }, 1000);
+    });
+    });
+
+
 </script>
+
 </body>
 </html>
 
