--- a/public/login.html
+++ b/public/login.html
@@ -42,7 +42,11 @@
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav scroll-to navbar-nav">
-                <li class="active"><a href="/seniority/public/index-contact.html">home</a></li>
+
+                <li class="active"><a href="home">home</a></li>
+                <li><a href="/map">Find Help</a></li>
+                <li><a href="/help">Help</a></li>
+                <li><a id="loginLogout" href="/login"></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right socials">
                 <li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -89,14 +93,14 @@
                             <div class="row">
                                 <p class="woah text-center">
                                     Login as...
-                                    <label><input type="radio" name="log" value="help" checked><span>helper</span></label>
+                                    <label style="padding-right:2px;"><input type="radio" name="log" value="help" checked><span>helper</span></label>
                                     <label><input type="radio" name="log" value="no"><span> helpee</span></label>
                                 </p>
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 text-center">
                                     <button type="button" onclick="Helper()" name="submit" class="btn btn-lg btn-skin btn-radius margin-b-20">Login</button>
-                                    <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register.html">here</a> to register!</p>
+                                    <p style="margin-top:10px; margin-bottom: -10px;">Not a member? Click <a href="/register">here</a> to register!</p>
                                 </div>
                             </div>
                         </div>
@@ -180,6 +184,21 @@
 <!-- Vimeo video API -->
 <script src="js/headroom.js" type="text/javascript"></script>
 <script>
+
+    window.onload = function() {
+        axios.get('/auth/me', function(req, res, next){
+            let user = res.data;
+            return user;
+        })
+                .then(user =>
+        {
+            if(!user)
+                $("#loginLogout").html('Login');
+            else
+                $("#loginLogout").html('Logout');
+        });
+    };
+
     function Helper()
     {
         let e = $("#email").val();
@@ -188,7 +207,6 @@
 
         if(rad == "help")
         {
-            console.log("ayyy");
             axios.post('auth/login/help', {
                 email: e,
                 password: p,
