--- a/public/register.html
+++ b/public/register.html
@@ -43,12 +43,12 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
-                    <ul class="nav scroll-to navbar-nav"> 
-                        <li class="active"><a href="home">home</a></li>
-                        <li><a href="/map.html">Find Help</a></li>
-                        <li><a href="help">Help</a></li>
-                        <li><a href="login">Login</a></li>
+                    <ul class="nav scroll-to navbar-nav">
 
+                        <li class="active"><a href="/home">home</a></li>
+                        <li><a href="/map">Find Help</a></li>
+                        <li><a href="/help">Help</a></li>
+                        <li><button type="button" onclick="logMeOut()" id="loginLogout"></button></li>
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right socials">
@@ -76,7 +76,7 @@
                                 <h3>Create a free account</h3>
                                 <div class="assan-contact">
                                     <div class="row">
-                                        <div class="col-sm-12"> 
+                                        <div class="col-sm-12">
                                             <div class="row">
                                                 <div class="col-sm-12 margin-b-20">
                                                     <input type="text" id="fullname" class="form-control" placeholder="Full Name...." />
@@ -101,14 +101,14 @@
                                     <div class="row">
                                         <p class="woah text-center">
                                             Register as...
-                                            <label><input type="radio" name="signup" value="help" checked><span>helper</span></label>
+                                            <label style="padding-right:2px;"><input type="radio" name="signup" value="help" checked><span>helper</span></label>
                                             <label><input type="radio" name="signup" value="no"><span> helpee</span></label>
                                         </p>
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-12 text-center">
                                             <button type="button" onclick="Helper()" class="btn btn-lg btn-skin btn-radius margin-b-20">Register</button>
-                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login.html">here!</a></p>
+                                            <p style="margin-top:15px; margin-bottom: -10px;">Already a member? Click <a href="/login">here!</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -192,6 +192,35 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
+
+            window.onload = function() {
+                axios.get('/auth/me', function(req, res, next){
+                    let user = res.data;
+                    return user;
+                })
+                        .then(user =>
+                {
+                    if(!user)
+                {
+                    $("#loginLogout").html('Login');
+                }
+                    else
+                {
+                    $("#loginLogout").html('Logout');
+                }
+                });
+            };
+
+            function logMeOut()
+            {
+                let stat = document.getElementById("loginLogout").innerHTML;
+                if(stat == "Logout")
+                    axios.post('/auth/logout')
+                            .then(() => {
+                                window.location.href = "/login"
+                    })
+            }
+
             function Helper()
             {
                 let n = $("#fullname").val();
