--- a/public/getHelp.html
+++ b/public/getHelp.html
@@ -654,6 +654,7 @@
         <!--footer end-->
 
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="js/jquery-migrate.min.js" type="text/javascript"></script>
         <script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
         <script src="js/jquery.backstretch.min.js" type="text/javascript"></script>
@@ -661,7 +662,7 @@
         <script src="js/smoothscroll.js"></script>
         <script src="bower_components/wow/dist/wow.min.js"></script>
         <script src="bower_components/lightbox2/dist/js/lightbox.min.js" type="text/javascript"></script>
-
+        <script src="socket_utils.js" type="text/javascript"></script>
         <script src="js/modernizr.custom.97074.js" type="text/javascript"></script>
         <script src="js/parallax.min.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
@@ -672,6 +673,7 @@
         <!-- Vimeo video API -->
         <script src="js/headroom.js" type="text/javascript"></script>
         <script>
+            var func = findHelp()
             // grab an element
             var myElement = document.querySelector("header");
             // construct an instance of Headroom, passing the element
